- Decreased looting time for bug runs

11/1/23
 - Forgot to update the image assets, leading to an error. Fixed now
 - Added collection for wealth clock, blueberry dispenser, strawberry dispenser, royal jelly dispenser

13/1/23
- Another bug fix
- Fixed paths for pine tree, pumpkin and cactus

14/1/23
-QOL changes to the GUI 
- Improved walk back to hive path for strawberry
- You can now change the resolution through the GUI instead of the save.txt file
- Option to send screenshots of the game to the user via discord webhook

15/1/23
- Fixed bug regarding squares gathering pattern
- Implemented multi-processing, leading to a Reduction in pause times between gather pattern
- disconnect check
- rejoin convert method
- Added treat dispenser

16/1/23
- If hive aligning fails, the macro attempts it one more time before before assuming that player is facing the right direction. This helps to deal with resetting on spawn
 
18/1/23
- Added discord bot support to allow for user interaction with the macro
- Change to the pixel detection coordinate for backpacks of built-in display
- Walkspeed can now be in decimals 

20/1/23
- Changes to stump field, pineapple field and strawberry dispenser paths
- Changes to GUI so that it overrides default theme and works as expected
- Updated the webhook so that it reads the settings when the macro is started and not when the program is launched
- Added a way to update the macro via the GUI

21/1/23
- Added a way to update the macro via the GUI
- Makes the macro autoclick when it cant find the canon, to exit any bear dialog
- Increased the rejoin time to 50secs. (The macro will wait for 50s for roblox to load when rejoining) 
- Implemented threshold hive searching. This allows the macro to automatically find the best possible hive orientation if hive searching fails
- Reduced searching area of disconnect.png to lower chances of false positives
- Added hive calibration
- Adjusted disconnect check area